<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/add_estate_housing_fragment_container_padding"
    tools:context=".views.fragments.AddEstateAgentFragment">


    <TextView
        android:id="@+id/add_estate_agent_last_name_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/add_estate_housing_title"
        android:text="@string/last_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/add_estate_agent_last_name_edit_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginBottom="@dimen/add_estate_housing_fragment_text_margin"
        app:layout_constraintTop_toBottomOf="@id/add_estate_agent_last_name_txt"
        android:hint="@string/last_name"
        android:autofillHints="@string/last_name"/>

    <TextView
        android:id="@+id/add_estate_agent_first_name_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/add_estate_housing_title"
        android:text="@string/first_name"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/add_estate_agent_last_name_edit_txt"/>

    <EditText
        android:id="@+id/add_estate_agent_first_name_edit_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginBottom="@dimen/add_estate_housing_fragment_text_margin"
        app:layout_constraintTop_toBottomOf="@id/add_estate_agent_first_name_txt"
        android:hint="@string/first_name"
        android:autofillHints="@string/first_name"/>

    <TextView
        android:id="@+id/add_estate_agent_email_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/add_estate_housing_title"
        android:text="@string/email"
        app:layout_constraintTop_toBottomOf="@id/add_estate_agent_first_name_edit_txt"/>

    <EditText
        android:id="@+id/add_estate_agent_email_edit_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="@dimen/add_estate_housing_fragment_text_margin"
        app:layout_constraintTop_toBottomOf="@id/add_estate_agent_email_txt"
        android:hint="@string/email"
        android:autofillHints="@string/email"/>

    <TextView
        android:id="@+id/add_estate_agent_phone_number_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/add_estate_housing_title"
        android:text="@string/phone_number"
        app:layout_constraintTop_toBottomOf="@id/add_estate_agent_email_edit_txt"/>

    <EditText
        android:id="@+id/add_estate_agent_phone_number_edit_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:layout_marginBottom="@dimen/add_estate_housing_fragment_text_margin"
        app:layout_constraintTop_toBottomOf="@id/add_estate_agent_phone_number_txt"
        android:hint="@string/phone_number"
        android:autofillHints="@string/phone_number"/>

    <View
        android:id="@+id/add_estate_agent_separator_view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        android:layout_marginTop="@dimen/add_estate_housing_fragment_view_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_estate_agent_phone_number_edit_txt"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/add_estate_agent_rcv"
        android:layout_width="match_parent"
        android:layout_height="272dp"
        tools:listitem="@layout/item_estate_agent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_estate_agent_separator_view"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_estate_agent_add_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="center"
        app:fabSize="mini"
        android:src="@drawable/ic_baseline_add_48"
        app:backgroundTint="@color/colorPrimary"
        android:layout_marginBottom="@dimen/add_estate_housing_fragment_fab_margin"
        android:layout_marginEnd="@dimen/add_estate_housing_fragment_fab_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>
